# Tahira

./: README.md
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs
backend/src/models/: enums.rs  place.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: mod.rs  place_card.rs  place_list.rs
frontend/src/models/: enums.rs  place.rs
src/: db.rs  handlers.rs  main.rs
src/models/: enums.rs  mod.rs  place.rs
