[package]
name = "tahira-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "json",
  "postgres",
  "macros",
] }
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
