[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
wasm-bindgen-futures = "0.4.50"
gloo-net = "0.6.0"
web-sys = { version = "0.3.77", features = ["console"] }
